--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
-VUE_APP_API_BASE_URL=http://106.14.40.182/api
+VUE_APP_API_BASE_URL=http://10.160.205.247:8050/
