--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ant-design-vue": "^1.7.1",
     "axios": "^0.19.0",
     "core-js": "^3.1.2",
+    "echarts": "^5.0.1",
     "enquire.js": "^2.1.6",
     "jsbarcode": "^3.11.3",
     "lodash.clonedeep": "^4.5.0",
