--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NODE_ENV=development
 VUE_APP_PREVIEW=true
-VUE_APP_API_BASE_URL=http://c52b-116-226-68-102.ngrok.io/api
+VUE_APP_API_BASE_URL=http://192.168.4.68:8050/api
